k8s/match3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: match3
  namespace: match3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: match3
  template:
    metadata:
      labels:
        app: match3
    spec:
      containers:
      - name: match3
        image: mariuseu/match3-k8s:latest
        ports:
        - containerPort: 8000
