k8s/match3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: match3
  namespace: match3
spec:
  type: ClusterIP
  selector:
    app: match3
  ports:
  - port: 80
    targetPort: 8000
