k8s/match3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: match3-ingress
  namespace: match3
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
  - host: match3.slax.ro
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: match3
            port:
              number: 80
